fix, add 1. fix td text align 2. add shop ejs

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -81,7 +81,7 @@
     td {
       vertical-align: middle;
 
-      &:last-child {
+      &:last-child:not(:first-child) {
         text-align: right;
       }
 
